# Sapphire

./: README.md  instructions.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diff_ops.rs  fs_ops.rs  git_ops.rs  lib.rs  main.rs  session.rs
src/components/: DiffView.tsx  Editor.tsx  Preview.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx
src/hooks/: useGitStatus.ts
src/store/: editorStore.ts  gitStore.ts  settingsStore.ts
src/styles/: global.css
src/styles/themes/: dark.css  light.css
src/utils/: diffHunks.ts
