[package]
name = "sapphire"
version = "0.1.0"
description = "Sapphire — fast, local-only markdown editor with Git-aware session diffing"
authors = ["Muhammad Saad Shamim"]
edition = "2021"

[lib]
name = "sapphire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
similar = { version = "2", features = ["unicode"] }
